feat(analysis): fatigue failure download json #190
